[gd_scene load_steps=7 format=3 uid="uid://b8q3x7n4k2p1a"]

[ext_resource type="Script" path="res://scripts/ui/alien_ai_demo.gd" id="1"]
[ext_resource type="Script" path="res://scripts/battlescape/ai_manager.gd" id="2"]
[ext_resource type="Script" path="res://scripts/battlescape/alien_ai.gd" id="3"]
[ext_resource type="Script" path="res://scripts/battlescape/inventory_manager.gd" id="4"]
[ext_resource type="Script" path="res://scripts/battlescape/sample_weapon_data.gd" id="5"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 16
font_color = Color(1, 1, 1, 1)

[node name="AlienAIDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
text = "Alien AI System Demo"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="AIManager" type="Node" parent="."]
script = ExtResource("2")

[node name="DemoControls" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 80.0
offset_right = 300.0
offset_bottom = -20.0
grow_vertical = 2

[node name="CreateSquadButton" type="Button" parent="DemoControls"]
layout_mode = 2
text = "Create AI Squad (3 units)"

[node name="CreateSingleButton" type="Button" parent="DemoControls"]
layout_mode = 2
text = "Create Single AI Unit"

[node name="BehaviorLabel" type="Label" parent="DemoControls"]
layout_mode = 2
text = "Group Behavior:"

[node name="BehaviorOption" type="OptionButton" parent="DemoControls"]
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "Aggressive"
popup/item_0/id = 0
popup/item_1/text = "Defensive"
popup/item_1/id = 1
popup/item_2/text = "Stealthy"
popup/item_2/id = 2
popup/item_3/text = "Berserk"
popup/item_3/id = 3

[node name="SetBehaviorButton" type="Button" parent="DemoControls"]
layout_mode = 2
text = "Set Group Behavior"

[node name="StatusLabel" type="Label" parent="DemoControls"]
layout_mode = 2
text = "AI Status: Ready"

[node name="LogContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 2

[node name="LogVBox" type="VBoxContainer" parent="LogContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ClearLogButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 0
grow_vertical = 0
text = "Clear Log"

[connection signal="pressed" from="DemoControls/CreateSquadButton" to="." method="_on_create_squad_pressed"]
[connection signal="pressed" from="DemoControls/CreateSingleButton" to="." method="_on_create_single_pressed"]
[connection signal="pressed" from="DemoControls/SetBehaviorButton" to="." method="_on_set_behavior_pressed"]
[connection signal="pressed" from="ClearLogButton" to="." method="_on_clear_log_pressed"]
